@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.erakk.lnreader"
     android:installLocation="auto"
-    android:versionCode="20131214"
+    android:versionCode="20131215"
     android:versionName="1.1.13-beta" >
 
     <uses-sdk
