@@ -1,6 +1,7 @@
 1.1.13-beta:
 - Update parser to handle ToAru Index.
 - Update immersive mode for KitKat (liyhcharles).
+- Add check DB (Tap DB Save Location).
 
 1.1.12:
 - Fix External Page Refresh.
